Fixed some typos which have been found by Debian's QA tools
Change-Id: I001b3e449a0f0e6a17d1029af9b445f0bbe8b248

--- a/Utilities/verdict/docs/VerdictUserManual2007/Hex.tex
+++ b/Utilities/verdict/docs/VerdictUserManual2007/Hex.tex
@@ -40,7 +40,7 @@ L_0 = \normvec{L_0}\quad
 \dots\quad
 L_{11} = \normvec{L_{11}}
 \]
-and the largest and smallest edge lenghts are, respectively,
+and the largest and smallest edge lengths are, respectively,
 \begin{equation*}
 \begin{array}{lcl}
   L_{\min} &=& \min\left\{L_0, \dots, L_{11} \right\}\\
