--- a/Utilities/verdict/docs/VerdictUserManual2007/Tet.tex
+++ b/Utilities/verdict/docs/VerdictUserManual2007/Tet.tex
@@ -33,7 +33,7 @@ L_3 = \normvec{L_3}\quad
 L_4 = \normvec{L_4}\quad
 L_5 = \normvec{L_5}
 \]
-and the largest and smallest edge lenghts are, respectively,
+and the largest and smallest edge lengths are, respectively,
 \[
 L_{\min} = \min\left(L_0, L_1, L_2, L_3, L_4, L_5\right)
   \rule{2em}{0pt}
