--- a/Utilities/verdict/docs/VerdictUserManual2007/Tri.tex
+++ b/Utilities/verdict/docs/VerdictUserManual2007/Tri.tex
@@ -26,7 +26,7 @@ L_0 = \normvec{L_0}\quad
 L_1 = \normvec{L_1}\quad
 L_2 = \normvec{L_2}
 \]
-and the largest and smallest edge lenghts are, respectively,
+and the largest and smallest edge lengths are, respectively,
 \[
 L_{\min} = \min\left(L_0, L_1, L_2\right)
   \rule{2em}{0pt}
